fix next previous buttons without overlapping the updater icon

--- a/assets/js/datatables/media/css/demo_table.css
+++ b/assets/js/datatables/media/css/demo_table.css
@@ -71,7 +71,8 @@
 
 .dataTables_paginate {
 	float: right;
-	text-align: right;
+	text-align: center;
+	width: 100%;
 }
 
 /* Pagination nested */
@@ -82,6 +83,7 @@
 	cursor: pointer;
 	cursor: hand;
 	color: #111 !important;
+	width: 80px;
 }
 .paginate_disabled_previous:hover, .paginate_enabled_previous:hover,
 .paginate_disabled_next:hover, .paginate_enabled_next:hover {
